# rusty-spaceship

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  content.yaml  index.html  shell.nix
content/: index.css
src/: app.rs  data.rs  main.rs  schema.rs
src/app/: components.rs  views.rs
src/app/components/: grid_tile.rs  html.rs  markdown.rs  nav_bar.rs  page.rs
src/app/views/: about.rs  contact.rs  main.rs  projects.rs  readme.rs
